--- a/Panditji/package.json
+++ b/Panditji/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
