--- a/Panditji/package.json
+++ b/Panditji/package.json
@@ -13,6 +13,8 @@
     "@emailjs/browser": "^4.4.1",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
